Use custom footer

--- a/index.html
+++ b/index.html
@@ -266,6 +266,19 @@
     </section>
   </main>
   <footer style="padding:25px 0;">
+    <span id="footer-directive">
+      <p>
+        <a href="/">Home</a>
+        •
+        <a href="/feed">RSS</a>
+      </p>
+      <p style="margin: 0;">
+        <a href="https://bearblog.dev" style="text-decoration: none;"><span class="fx sway subtle">Powered by Bear ʕ•ᴥ•ʔ</span></a>
+      </p>
+      <p>
+         <span class="fx sway subtle">made with love and curiosity</span>
+      </p>
+    </span>
     <span>
       Powered by <a href="https://bearblog.dev">Bear ʕ•ᴥ•ʔ</a>
     </span>
