Prepare now page and add music recs

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <nav>
       <p>
         <a href="/">Home</a>
+        <a href="/helpers">Helpers</a>
       </p>
     </nav>
     <form id="proxyForm">
