--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta name="color-scheme" content="light dark" />
 		<title>Vite + Preact</title>
-		<link rel="stylesheet" href="/src/style.scss">
+		<link rel="stylesheet" href="/src/theme.scss">
 	</head>
 	<body>
 		<div id="app"></div>
